Changed dates and name of Rmd file

--- a/Evomics_2024_R_solution_ggplot.rmd
+++ b/Evomics_2024_R_solution_ggplot.rmd
@@ -1,7 +1,7 @@
 ---
 title: "R tutorial for Workshop on Genomics in Cesky Krumlov"
-author: "Janina Rinke, Kartik Singhal, Milos Duchoslav"
-date: "May 2023"
+author: "Janina Rinke, Kartik Singhal, Milos Duchoslav, Luis Chica"
+date: "January 2024"
 output:
   html_document:
    code_folding: show
