--- a/Evomics_2024_R_solution_ggplot.rmd
+++ b/Evomics_2024_R_solution_ggplot.rmd
@@ -15,7 +15,7 @@ editor_options:
 ### 1 Introduction
 
 Welcome to the `R` and `ggplot2` session. The purpose of this file is to guide you through the exercises.
-In this session, we will use an R Markdown file. R Markdown documents are good for keeping the R code, plots and descriptions (structured text) in one place. It enables you to make nice reports from the data that can be exported as html, pdf etc. You can find more information on R Markdown [here](https://rmarkdown.rstudio.com/lesson-1.html) and a cheatcheet for R Markdown [here](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf).
+In this session, we will work in RStudio and use an R Markdown file. R Markdown documents are good for keeping the R code, plots and descriptions (structured text) in one place. It enables you to make nice reports from the data that can be exported as html, pdf etc. You can find more information on R Markdown [here](https://rmarkdown.rstudio.com/lesson-1.html) and a cheatsheet for R Markdown [here](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf).
 
 #### Some general useful information:
 If you want to insert a new code chunk, you can do it with `ctrl + alt + i` (Mac: `opt + cmd + i`).
@@ -72,8 +72,7 @@ The purpose of the experiment was to see whether the mutations give the plants s
 Load the dataset and take a look at it:
 
 ```{r Load data}
-#Import the data and assign it the name "plantData" using <-
-#plantData <- read.csv("~/workshop_materials/r_ggplot2/plantData.csv")
+# Import the data and assign it the name "plantData" using <-
 plantData <- read.csv(file = "plantData.csv")
 ```
 
@@ -143,8 +142,9 @@ We have a list of the plants that were repotted during the experiment. The info 
 First, use the function `read.csv()` to read the data from file `"~/workshop_materials/r_ggplot2/info_repotted.csv"`, and assign it to a variable called `df` (dataframe). Then you can look at the data using some of the functions used above.
 
 ```{r load data, class.source= 'fold-hide'}
-#Import additional info which plants have been repotted
+# Import additional info which plants have been repotted
 df <- read.csv("info_repotted.csv")
+df
 ```
 
 *Several tips:*
@@ -161,7 +161,7 @@ We will show you different possibilities to manipulate & filter your data. For e
 The `dplyr` package uses a similar syntax to Unix, the `%>%` symbol in `dplyr` simply represents the `|` (pipe) symbol in Unix. Find a cheat sheet [here](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf)
 
 **Base R** 
-The base R language doesn't use this, an input for base R should always be an argument in brackets `(x = input)`.
+The base R language doesn't use this, an input for base R should be an argument in brackets `(x = input)`. (Actually, there is an base R version of pipe in last versions of R but it is not used much.)
 The dollar sign `$` can be used to access a column in data.frame by its name. Here we will use `df$info` to access the column named `info` in the data.frame named `info`. Similarly, you can use `plantData$plant_id` to access the `plant_id` column of `plantData` data.frame.
 
 ```{r split columns, merge datasets}
@@ -172,14 +172,12 @@ df2 <- df %>%
   tidyr::separate(col = 1, into = c("plant_id", "info"), sep = "_")
 
 ## Possibility 2: use sub from base R and regular expressions to exchange part of the line for nothing
-df.2b1 <- sub(pattern = "_.*$", replacement = "", x = df$info) 
-# exchange the part after underscore for nothing ("")
-df.2b2 <- sub(pattern = "^.*_", replacement = "", x = df$info) 
-# exchange the part before underscore for nothing ("")
+df.2b1 <- sub(pattern = "_.*$", replacement = "", x = df$info) # exchange the part after underscore for nothing ("")
+df.2b2 <- sub(pattern = "^.*_", replacement = "", x = df$info) # exchange the part before underscore for nothing ("")
 df.2b <- data.frame(plant_id = df.2b1, info = df.2b2) # put the two vectors to data.frame
 # Regular expression explanation:
 # _ means literally _
-# . means any character (number/ alphabet/ etc.)
+# . means any character (number, alphabet, etc.)
 # * means that the preceding character is used 0 or more times
 # $ means the end of the line
 # ^ means the beginning of the line
@@ -205,9 +203,9 @@ We will clean-up our dataset before we create some plots.
 First, we will re-name the columns `NPQ_L1`, `NPQ_L2`, `NPQ_L3` and `NPQ_L4` into `NPQ_t1`, `NPQ_t2`, `NPQ_t3` and `NPQ_t4` because they represent timepoints of measurements.
 Here is the code how to do it for `NPQ_L1` and `NPQ_L2` column. 
 ```{r rename first two columns}
-#Rename columns
-#the pattern for dplyr is rename(new_col_name=old_col_name)
-#All your changes will not be overwritten unless you assign it a name with <-
+# Rename columns
+# The pattern for dplyr is rename(new_col_name=old_col_name).
+# All your changes will not be overwritten unless you assign it a name with <-
 plantData <- plantData %>%
   dplyr::rename(NPQ_t1 = NPQ_L1, NPQ_t2 = NPQ_L2)
 ```
@@ -238,6 +236,27 @@ plantData <- plantData %>%
   dplyr::relocate(condition_info, .after = condition)
 ```
 
+
+`mutate()` can also be used in conjunction with `ifelse()` to create a new column based on conditions applied to an existing column. Think of `ifelse()` as the quick decision-maker. It takes a look at each piece of the data and asks a question. If the answer is yes (`TRUE`), it gives one response; if is no (`FALSE`), it gives another one. 
+
+We can use these two functions to create a new column called `size_category` based on the values of `size_mm2`. 
+```{r}
+# Add a new column size_category using mutate and ifelse
+plantData <- plantData %>%
+  dplyr::mutate(size_category = ifelse(is.na(size_mm2), "Not measured", # Check for NA values first
+                                       ifelse(size_mm2 < 500, "Small",  # Condition for small size
+                                              ifelse(size_mm2 <= 2500, "Medium", # Condition for medium size
+                                                     "Large"))) # Default condition for large size
+  )
+```
+
+In this example:
+  `is.na(size_mm2)` checks if the size_mm2 value is not available. If this is `TRUE`, "Not measured" is returned.
+  `size_mm2 < 500` checks if the size_mm2 value is less than 500. If this is TRUE, "Small" is returned.
+  `size_mm2 <= 2500` checks if the size_mm2 value is less than or equal to 2500. If this is `TRUE`, "Medium" is returned.
+  If none of the above conditions are `TRUE`, "Large" is returned by default.
+
+
 After that, we will remove plants that have died during the experiment. These plants have *NA* values in columns `size_mm2` and `QY_max`. The NPQ values were not measured for all plants, and we are not going to plot those columns yet, so it is fine for now that there are some *NA* values there.
 
 ```{r Clean your data}
@@ -264,6 +283,12 @@ pD_deadPlants <- plantData %>%
   filter(is.na(size_mm2), is.na(QY_max))
 ```
 
+**Exercise Optional**: Let's say we are working with the `plantData` dataframe and want to simplify the analysis by focusing on only a few columns. Use `select()` to create a new dataframe that includes only the `plant_id`, `genotype`, `condition`, and the newly created `size_category` columns.
+```{r select specific columns, class.source= 'fold-hide'}
+simplifiedPlantData <- plantData %>%
+  dplyr::select(plant_id, genotype, condition, size_category)
+```
+
 **Congrats!** You are now good to go to create some nice plots with your `pD_clean` dataset! :) 
 
 ### 4 Creating plots with `ggplot2`
@@ -281,23 +306,22 @@ Start with making a basic boxplot of just the wt plants.
 
 Hint: Use the function `filter` from the package `dplyr`. As an argument for the `filter` function you should use `genotype == "wt"`. We use the double equal sign `==`, because the algorithm is going through each row of the dataframe and checking whether the `genotype` is `wt` or something else, returning TRUE or FALSE. Single equal sign `=` is used for assigning values to arguments.
 
-We will use some of the "geoms" (geometric objects) introduced earlier to make our plots today. While there are many possible geoms possible [list of geoms](https://ggplot2.tidyverse.org/reference/index.html#section-layer-geoms), we will focus on the following geoms in this session:
-
-* `geom_boxplot()` - A classic box and whiskers plot   
-* `geom_point()` - A plot with data points (like a typical scatterplot, but it can also plot a numeric variable against a categorical variable)
-* `geom_jitter()` - Similar to `geom_point()` but it adds some jitter to the points in case they're overlapping (more applicable when plotting a numeric variable with a categorical variable)
-* `geom_smooth()` - Typically used as an additional layer to the scatterplot to help identify trends or patterns in the data. 
-
-
 ```{r solution pD_clean_wt , class.source= 'fold-hide'}
 # Subset your data to only have wt genotype
 pD_clean_wt <- pD_clean %>%
   filter(genotype == "wt")
 ```
 
+We will use some of the "geoms" (geometric objects) introduced earlier to make our plots today. While there are many geoms possible ([list of geoms](https://ggplot2.tidyverse.org/reference/index.html#section-layer-geoms)), we will focus on the following geoms in this session:
+
+* `geom_boxplot()` - A classic box and whiskers plot   
+* `geom_point()` - A plot with data points (like a typical scatterplot, but it can also plot a numeric variable against a categorical variable)
+* `geom_jitter()` - Similar to `geom_point()` but it adds some jitter to the points in case they're overlapping (more applicable when plotting a numeric variable with a categorical variable)
+* `geom_smooth()` - Typically used as an additional layer to the scatterplot to help identify trends or patterns in the data. 
+
 Now make the boxplot.
 
-The main arguments `ggplot` needs are the dataframe and what variables in the dataframe need to be plotted. The dataframe is simply provided to the `data` argument. Information on what is plotted is provided using the `aes` (aesthetic mappings) function. This allows us to tell `ggplot` what variables we want to plot (that is, which columns of our dataframe should be on the x and y axes).
+The main `ggplot` function needs as arguments the dataframe and what variables in the dataframe need to be plotted. The dataframe is simply provided to the `data` argument. Information on what is plotted is provided using the `aes` (aesthetic mappings) function. This allows us to tell `ggplot` what variables we want to plot (that is, which columns of our dataframe should be on the x and y axes).
 ```{r plotting graphs - p0, p1}
 # Creating the background of ggplots
 p0 <- ggplot(data = pD_clean_wt, aes(x=condition_info, y=QY_max))
@@ -310,7 +334,7 @@ p1 <- ggplot(data = pD_clean_wt, aes(x=condition_info, y=QY_max)) +
   geom_boxplot()
 p1
 
-# Fun fact- you can also make the p1 plot using the code p0 + geom_boxplot() 
+# Fun fact - you can also make the p1 plot using the code p0 + geom_boxplot() 
 ```
 You see that you can create an object with the output from the `ggplot()` function. When you run the name of the object (`p1` in this case), the plot will show.
 
@@ -353,10 +377,10 @@ p4
 
 *Comment on biology: You can see that the QY_max values for psbo1cr are lower than for the wt, but they do not differ much for the different conditions.*
 
-Compare the code for the boxplots and strip plots. The first line is the same for both types of plots, and then we can add either boxplots or points or jitter points as layers, highlighting the modular nature of `ggplot`.
+Compare the code for the boxplots and stripplots. The first line is the same for both types of plots, and then we can add either boxplots or points or jitter points as layers, highlighting the modular nature of `ggplot`.
 
 
-Now we will plot the correlation of `size_mm2` vs `QY_max` (size is dependant on QY_max).
+Now we will plot the correlation of `size_mm2` vs `QY_max` (size is dependent on QY_max).
 ```{r}
 # Plot correlation as scatterplot
 p5 <- ggplot(pD_clean_wt, aes(x=QY_max, y=size_mm2)) + 
@@ -413,7 +437,7 @@ genotype_vector
 # The basic structure of a for loop is - for (item in list_of_items) {execute this command}
 
 # Let's start with a for loop that will simply (iterate through a list of words), and {print} each word.
-for (item in c("my", "potato", "fell", "in", "my", "lemonade")) {
+for (item in c("I", "like", "colorful", "glowing", "chickens")) {
   print(item)
 }
 
@@ -425,13 +449,13 @@ for (iterated_genotype in genotype_vector) {
   pD_clean_gt <- pD_clean %>%
     filter(genotype == iterated_genotype)
   
-  # generate a strip plot for that genotype
+  # generate a stripplot for that genotype
   p_temp <- ggplot(pD_clean_gt, aes(x=condition_info, y=QY_max)) + 
-  geom_jitter(width = 0.1) +
-  ggtitle(iterated_genotype)
+    geom_jitter(width = 0.1) +
+    ggtitle(iterated_genotype)
   
   print(p_temp)
-
+  
 }
 ```
 Three plots, each for one genotype, should be generated. You can view them using arrows in the Plots window.
@@ -484,9 +508,9 @@ for (iterated_condition in condition_vector) {
     filter(condition_info == iterated_condition)
   
   # generate a strip plot for that genotype
-  p_temp <- ggplot(pD_clean_gt, aes(x=genotype, y=QY_max)) + 
+  p_temp <- ggplot(pD_clean_gt, aes(x = genotype, y = QY_max)) + 
   geom_jitter(width = 0.1) +
-  ggtitle(iterated_genotype)
+  ggtitle(condition_vector)
   
   print(p_temp)
 }
@@ -563,7 +587,7 @@ p1_fancier
 
 ##### Specification of colors
 
-The colors can be specified through several ways in R. There are many color names (you can run `colors()` to see the list of them or `demo("colors")` to the actual colors). You can also use hexadecimal code or functions like `hsv()` to set the colors. For simple color changes, assign a single color value to the `geom_()` function. 
+The colors can be specified through several ways in R. There are many color names (you can run `colors()` to see the list of them or `demo("colors")` to see the actual colors). You can also use hexadecimal code or functions like `hsv()` to set the colors. For simple color changes, assign a single color value to the `geom_()` function. 
 
 ```{r}
 p1_violet <- ggplot(pD_clean_wt, aes(x=condition_info, y=QY_max)) +
@@ -609,7 +633,7 @@ p1_fanciest <- ggplot(pD_clean_wt, aes(x=condition_info, y=QY_max)) +
 p1_fanciest
 ```
 
-**Extra exercise:** We would like to check whether the time of measurement (the time that the plants were standing by the instrument waiting for measurement) might have influenced the results. Plot the dependance of QY_max on time of measurement for different conditions and genotypes as a scatterplot. Distinguish conditions by colors of points and genotypes by shapes of points.
+**Extra exercise:** We would like to check whether the time of measurement (the time that the plants were standing by the instrument waiting for measurement) might have influenced the results. Plot the dependence of QY_max on time of measurement for different conditions and genotypes as a scatterplot. Distinguish conditions by colors of points and genotypes by shapes of points.
 ```{r extra task, class.source= 'fold-hide'}
 #Plot dependance
 p8 <- ggplot(pD_clean, aes(x=time, y=QY_max)) +
@@ -644,7 +668,7 @@ p8b
 
 
 #### Exporting plots from R
-We have seen above how to save several plots to pdf. The `ggplot` package provides also an easy way how to save plot. Here is an example how to save the fanciest plot as an PNG image.
+We have seen above how to save several plots to pdf. The `ggplot` package provides also an easy way how to save plot. Here is an example how to save the fanciest plot as PDF.
 ```{r}
 ggsave(filename = "Evomics2023_fanciest_plot.pdf", plot = p1_fanciest, width = 7, height = 7)
 ```
@@ -675,11 +699,11 @@ NPQ_summary_long <- NPQ_summary %>%
   pivot_longer(cols = c(NPQ_t1, NPQ_t2, NPQ_t3, NPQ_t4), names_to = "Timepoint", values_to = "NPQ")
 
 # Create a new column with condition and genotype concatenated so that we can have 9 unique groups
-NPQ_summary_long <- NPQ_summary_long %>%
-  unite(condition_genotype, condition_info, genotype, sep = "_")
+NPQ_summary_long_2 <- NPQ_summary_long %>%
+  unite(col = condition_genotype, condition_info, genotype, sep = "_", remove = F)
 
 # Create the line plot
-p7 <- ggplot(NPQ_summary_long, aes(x = Timepoint, y = NPQ, color = condition_genotype)) +
+p7 <- ggplot(NPQ_summary_long_2, aes(x = Timepoint, y = NPQ, linetype = condition_info, color = genotype)) +
   geom_point() +
   geom_line(aes(group = condition_genotype)) +
   labs(x = "Timepoints", y = "NPQ", title = "Line Plot of NPQ across Timepoints") 
@@ -705,4 +729,3 @@ ggplot(data = exp, aes(x = cell.width, y = cell.height, col = treatment)) +
 ggplot(data = exp, aes(x = cell.width, y = cell.height, col = genotype)) +
   geom_point()
 ```
-
