--- a/Evomics_2025_R_solution_ggplot.rmd
+++ b/Evomics_2025_R_solution_ggplot.rmd
@@ -711,13 +711,16 @@ p7
 ```
 
 **Extra exercise:** An alternative way to visualize the above data is using a heatmap. We have not gone over these before, however, there is some information on making heatmaps in ggplot available here-  https://r-graph-gallery.com/79-levelplot-with-ggplot2.html.
+
+Hints: You can start from the same dataframe that you used for the line plot above, along with the `geom_tile()` function to make the heatmap. We suggest using `Timepoint` on the x-axis and `genotype` on the y axis, coloring by `NPQ` in the `geom_tile()` function. You can also use the `facet_wrap()` function with the `condition_info` column to split the plot by the various conditions! 
+
 ```{r solution npq heatmap, class.source= 'fold-hide'}
 p7_heatmap <- ggplot(NPQ_summary_long_2, aes(x = Timepoint, y = genotype)) +
   geom_tile(aes(fill = NPQ)) +
   scale_fill_gradient(low = "yellow", high = "red") +
   facet_wrap(~condition_info) +
   theme_minimal() + 
-  theme(axis.text.x = element_text(angle = 60, hjust=1))
+  theme(axis.text.x = element_text(angle = 60, hjust=1)) #rotate X-axis labels to avoid them overlapping.
 p7_heatmap
 ```
 
