Adding explanation for heatmap plot (2)

--- a/Evomics_2025_R_solution_ggplot.rmd
+++ b/Evomics_2025_R_solution_ggplot.rmd
@@ -709,6 +709,7 @@ p7 <- ggplot(NPQ_summary_long_2, aes(x = Timepoint, y = NPQ, linetype = conditio
   labs(x = "Timepoints", y = "NPQ", title = "Line Plot of NPQ across Timepoints") 
 p7
 ```
+The heatmap's interpretation is almost identical to the lineplot, where we observe the NPQ value increasing by timepoint across the conditions. It also allows a more straightforward comparison between geotypes so that we can observe that the *wt* and *psbo2cr* genotypes are similar while the *psbo1cr* genotype has higher NPQ values. 
 
 **Extra exercise:** An alternative way to visualize the above data is using a heatmap. We have not gone over these before, however, there is some information on making heatmaps in ggplot available here-  https://r-graph-gallery.com/79-levelplot-with-ggplot2.html.
 
