improving the end of tutorial

--- a/Evomics_2025_R_ggplot.rmd
+++ b/Evomics_2025_R_ggplot.rmd
@@ -609,4 +609,4 @@ Hint: This file is tab-separated. Use the `read.table()` function with arguments
 
 ### 5. End
 
-Thank you for doing this tutorial. If you have any comments or suggestions for improvement, you can write to Milos (duchmil[at]gmail.com) or tell us in person.
+Thank you for going through this tutorial. If you have any comments or suggestions for improvement, you can write to Milos (duchmil[at]gmail.com) or tell us in person.
