--- a/Evomics_R_ggplot_solution.rmd
+++ b/Evomics_R_ggplot_solution.rmd
@@ -139,7 +139,7 @@ We have a list of the plants that were repotted during the experiment. The info 
 
 **Exercise 1:** Load the `info_repotted.csv` dataset.
 
-First, use the function `read.csv()` to read the data from file `"~/workshop_materials/r_ggplot2/info_repotted.csv"`, and assign it to a variable called `df` (dataframe). Then you can look at the data using some of the functions used above.
+First, use the function `read.csv()` to read the data from file `"~/workshop_materials/Evomics_Intro_to_R/info_repotted.csv"`, and assign it to a variable called `df` (dataframe). Then you can look at the data using some of the functions used above.
 
 ```{r solution load data, class.source= 'fold-hide'}
 # Import additional info which plants have been repotted
@@ -462,11 +462,6 @@ Three plots, each for one genotype, should be generated. You can view them using
 You can export all the plots to e.g. a pdf file. This can be achieved by enclosing the plotting function between the function `pdf()`, which opens the connection to a file, and `dev.off()`, which closes the connection.
 
 ```{r use for loops}
-# We can grab the entire genotype column from the pD_clean dataframe, and then use the unique function for the individual genotypes.
-genotype_vector <- unique(pD_clean$genotype)
-# Check the unique genotype values
-genotype_vector
-
 # Open connection to pdf
 pdf(file = "striplots_genotypes.pdf", onefile = T) # Parameter onefile = T is there to make one file with multiple pages, instead of several files with one plot in each.
 
@@ -670,7 +665,7 @@ p8b
 #### 4.4 Exporting plots from R
 We have seen above how to save several plots to pdf. The `ggplot` package provides also an easy way how to save plot. Here is an example how to save the fanciest plot as PDF.
 ```{r}
-ggsave(filename = "Evomics2024_fanciest_plot.pdf", plot = p1_fanciest, width = 7, height = 7)
+ggsave(filename = "Evomics2024_fanciest_plot.pdf", plot = p1_man_colors, width = 7, height = 7)
 ```
 
 
